src/Skia/Bindings/Gr_context.hs

{-# LANGUAGE DeriveAnyClass #-}
{-# LANGUAGE DeriveFoldable #-}
{-# LANGUAGE DeriveFunctor #-}
{-# LANGUAGE DeriveGeneric #-}
{-# LANGUAGE DeriveTraversable #-}
{-# LANGUAGE DerivingStrategies #-}
{-# LANGUAGE DerivingVia #-}
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE EmptyCase #-}
{-# LANGUAGE ExplicitForAll #-}
{-# LANGUAGE GeneralizedNewtypeDeriving #-}
{-# LANGUAGE NamedFieldPuns #-}
{-# LANGUAGE OverloadedLabels #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE OverloadedStrings #-}
{-# LANGUAGE PatternSynonyms #-}
{-# LANGUAGE ScopedTypeVariables #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- | This is an auto-generated FFI binding module.
module Skia.Bindings.Gr_context where

import Foreign
import Foreign.C
import Foreign.Storable
import Foreign.Storable.Offset

import Skia.Bindings.Types


{- | C function signature:

@
void gr_recording_context_unref(gr_recording_context_t *context)
@
-}
foreign import ccall "gr_recording_context_unref" gr_recording_context_unref ::
  Ptr (Gr_recording_context) -- ^ C argument @"gr_recording_context_t * context"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_recording_context_unref'
foreign import ccall "&gr_recording_context_unref" p'gr_recording_context_unref ::
  FunPtr (Ptr (Gr_recording_context) -> IO (()))

{- | C function signature:

@
int gr_recording_context_get_max_surface_sample_count_for_color_type(gr_recording_context_t *context, sk_colortype_t colorType)
@
-}
foreign import ccall "gr_recording_context_get_max_surface_sample_count_for_color_type" gr_recording_context_get_max_surface_sample_count_for_color_type ::
  Ptr (Gr_recording_context) -- ^ C argument @"gr_recording_context_t * context"@
  -> Sk_colortype -- ^ C argument @"sk_colortype_t colorType"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'gr_recording_context_get_max_surface_sample_count_for_color_type'
foreign import ccall "&gr_recording_context_get_max_surface_sample_count_for_color_type" p'gr_recording_context_get_max_surface_sample_count_for_color_type ::
  FunPtr (Ptr (Gr_recording_context) -> Sk_colortype -> IO (CInt))

{- | C function signature:

@
gr_backend_t gr_recording_context_get_backend(gr_recording_context_t *context)
@
-}
foreign import ccall "gr_recording_context_get_backend" gr_recording_context_get_backend ::
  Ptr (Gr_recording_context) -- ^ C argument @"gr_recording_context_t * context"@
  -> IO (Gr_backend) -- ^ C return type: @"gr_backend_t"@

-- | Function pointer to 'gr_recording_context_get_backend'
foreign import ccall "&gr_recording_context_get_backend" p'gr_recording_context_get_backend ::
  FunPtr (Ptr (Gr_recording_context) -> IO (Gr_backend))

{- | C function signature:

@
_Bool gr_recording_context_is_abandoned(gr_recording_context_t *context)
@
-}
foreign import ccall "gr_recording_context_is_abandoned" gr_recording_context_is_abandoned ::
  Ptr (Gr_recording_context) -- ^ C argument @"gr_recording_context_t * context"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'gr_recording_context_is_abandoned'
foreign import ccall "&gr_recording_context_is_abandoned" p'gr_recording_context_is_abandoned ::
  FunPtr (Ptr (Gr_recording_context) -> IO (CBool))

{- | C function signature:

@
int gr_recording_context_max_texture_size(gr_recording_context_t *context)
@
-}
foreign import ccall "gr_recording_context_max_texture_size" gr_recording_context_max_texture_size ::
  Ptr (Gr_recording_context) -- ^ C argument @"gr_recording_context_t * context"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'gr_recording_context_max_texture_size'
foreign import ccall "&gr_recording_context_max_texture_size" p'gr_recording_context_max_texture_size ::
  FunPtr (Ptr (Gr_recording_context) -> IO (CInt))

{- | C function signature:

@
int gr_recording_context_max_render_target_size(gr_recording_context_t *context)
@
-}
foreign import ccall "gr_recording_context_max_render_target_size" gr_recording_context_max_render_target_size ::
  Ptr (Gr_recording_context) -- ^ C argument @"gr_recording_context_t * context"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'gr_recording_context_max_render_target_size'
foreign import ccall "&gr_recording_context_max_render_target_size" p'gr_recording_context_max_render_target_size ::
  FunPtr (Ptr (Gr_recording_context) -> IO (CInt))

{- | C function signature:

@
gr_direct_context_t *gr_recording_context_get_direct_context(gr_recording_context_t *context)
@
-}
foreign import ccall "gr_recording_context_get_direct_context" gr_recording_context_get_direct_context ::
  Ptr (Gr_recording_context) -- ^ C argument @"gr_recording_context_t * context"@
  -> IO (Ptr (Gr_direct_context)) -- ^ C return type: @"gr_direct_context_t *"@

-- | Function pointer to 'gr_recording_context_get_direct_context'
foreign import ccall "&gr_recording_context_get_direct_context" p'gr_recording_context_get_direct_context ::
  FunPtr (Ptr (Gr_recording_context) -> IO (Ptr (Gr_direct_context)))

{- | C function signature:

@
gr_direct_context_t *gr_direct_context_make_gl(const gr_glinterface_t *glInterface)
@
-}
foreign import ccall "gr_direct_context_make_gl" gr_direct_context_make_gl ::
  Ptr (Gr_glinterface) -- ^ C argument @"const gr_glinterface_t * glInterface"@
  -> IO (Ptr (Gr_direct_context)) -- ^ C return type: @"gr_direct_context_t *"@

-- | Function pointer to 'gr_direct_context_make_gl'
foreign import ccall "&gr_direct_context_make_gl" p'gr_direct_context_make_gl ::
  FunPtr (Ptr (Gr_glinterface) -> IO (Ptr (Gr_direct_context)))

{- | C function signature:

@
gr_direct_context_t *gr_direct_context_make_gl_with_options(const gr_glinterface_t *glInterface, const gr_context_options_t *options)
@
-}
foreign import ccall "gr_direct_context_make_gl_with_options" gr_direct_context_make_gl_with_options ::
  Ptr (Gr_glinterface) -- ^ C argument @"const gr_glinterface_t * glInterface"@
  -> Ptr (Gr_context_options) -- ^ C argument @"const gr_context_options_t * options"@
  -> IO (Ptr (Gr_direct_context)) -- ^ C return type: @"gr_direct_context_t *"@

-- | Function pointer to 'gr_direct_context_make_gl_with_options'
foreign import ccall "&gr_direct_context_make_gl_with_options" p'gr_direct_context_make_gl_with_options ::
  FunPtr (Ptr (Gr_glinterface) -> Ptr (Gr_context_options) -> IO (Ptr (Gr_direct_context)))

{- | C function signature:

@
gr_direct_context_t *gr_direct_context_make_vulkan(const gr_vk_backendcontext_t *vkBackendContext)
@
-}
foreign import ccall "gr_direct_context_make_vulkan" gr_direct_context_make_vulkan ::
  Ptr (Gr_vk_backendcontext) -- ^ C argument @"const gr_vk_backendcontext_t * vkBackendContext"@
  -> IO (Ptr (Gr_direct_context)) -- ^ C return type: @"gr_direct_context_t *"@

-- | Function pointer to 'gr_direct_context_make_vulkan'
foreign import ccall "&gr_direct_context_make_vulkan" p'gr_direct_context_make_vulkan ::
  FunPtr (Ptr (Gr_vk_backendcontext) -> IO (Ptr (Gr_direct_context)))

{- | C function signature:

@
gr_direct_context_t *gr_direct_context_make_vulkan_with_options(const gr_vk_backendcontext_t *vkBackendContext, const gr_context_options_t *options)
@
-}
foreign import ccall "gr_direct_context_make_vulkan_with_options" gr_direct_context_make_vulkan_with_options ::
  Ptr (Gr_vk_backendcontext) -- ^ C argument @"const gr_vk_backendcontext_t * vkBackendContext"@
  -> Ptr (Gr_context_options) -- ^ C argument @"const gr_context_options_t * options"@
  -> IO (Ptr (Gr_direct_context)) -- ^ C return type: @"gr_direct_context_t *"@

-- | Function pointer to 'gr_direct_context_make_vulkan_with_options'
foreign import ccall "&gr_direct_context_make_vulkan_with_options" p'gr_direct_context_make_vulkan_with_options ::
  FunPtr (Ptr (Gr_vk_backendcontext) -> Ptr (Gr_context_options) -> IO (Ptr (Gr_direct_context)))

{- | C function signature:

@
gr_direct_context_t *gr_direct_context_make_metal(void *device, void *queue)
@
-}
foreign import ccall "gr_direct_context_make_metal" gr_direct_context_make_metal ::
  Ptr (()) -- ^ C argument @"void * device"@
  -> Ptr (()) -- ^ C argument @"void * queue"@
  -> IO (Ptr (Gr_direct_context)) -- ^ C return type: @"gr_direct_context_t *"@

-- | Function pointer to 'gr_direct_context_make_metal'
foreign import ccall "&gr_direct_context_make_metal" p'gr_direct_context_make_metal ::
  FunPtr (Ptr (()) -> Ptr (()) -> IO (Ptr (Gr_direct_context)))

{- | C function signature:

@
gr_direct_context_t *gr_direct_context_make_metal_with_options(void *device, void *queue, const gr_context_options_t *options)
@
-}
foreign import ccall "gr_direct_context_make_metal_with_options" gr_direct_context_make_metal_with_options ::
  Ptr (()) -- ^ C argument @"void * device"@
  -> Ptr (()) -- ^ C argument @"void * queue"@
  -> Ptr (Gr_context_options) -- ^ C argument @"const gr_context_options_t * options"@
  -> IO (Ptr (Gr_direct_context)) -- ^ C return type: @"gr_direct_context_t *"@

-- | Function pointer to 'gr_direct_context_make_metal_with_options'
foreign import ccall "&gr_direct_context_make_metal_with_options" p'gr_direct_context_make_metal_with_options ::
  FunPtr (Ptr (()) -> Ptr (()) -> Ptr (Gr_context_options) -> IO (Ptr (Gr_direct_context)))

{- | C function signature:

@
gr_direct_context_t *gr_direct_context_make_direct3d(const gr_d3d_backendcontext_t *d3dBackendContext)
@
-}
foreign import ccall "gr_direct_context_make_direct3d" gr_direct_context_make_direct3d ::
  Ptr (Gr_d3d_backendcontext) -- ^ C argument @"const gr_d3d_backendcontext_t * d3dBackendContext"@
  -> IO (Ptr (Gr_direct_context)) -- ^ C return type: @"gr_direct_context_t *"@

-- | Function pointer to 'gr_direct_context_make_direct3d'
foreign import ccall "&gr_direct_context_make_direct3d" p'gr_direct_context_make_direct3d ::
  FunPtr (Ptr (Gr_d3d_backendcontext) -> IO (Ptr (Gr_direct_context)))

{- | C function signature:

@
gr_direct_context_t *gr_direct_context_make_direct3d_with_options(const gr_d3d_backendcontext_t *d3dBackendContext, const gr_context_options_t *options)
@
-}
foreign import ccall "gr_direct_context_make_direct3d_with_options" gr_direct_context_make_direct3d_with_options ::
  Ptr (Gr_d3d_backendcontext) -- ^ C argument @"const gr_d3d_backendcontext_t * d3dBackendContext"@
  -> Ptr (Gr_context_options) -- ^ C argument @"const gr_context_options_t * options"@
  -> IO (Ptr (Gr_direct_context)) -- ^ C return type: @"gr_direct_context_t *"@

-- | Function pointer to 'gr_direct_context_make_direct3d_with_options'
foreign import ccall "&gr_direct_context_make_direct3d_with_options" p'gr_direct_context_make_direct3d_with_options ::
  FunPtr (Ptr (Gr_d3d_backendcontext) -> Ptr (Gr_context_options) -> IO (Ptr (Gr_direct_context)))

{- | C function signature:

@
_Bool gr_direct_context_is_abandoned(gr_direct_context_t *context)
@
-}
foreign import ccall "gr_direct_context_is_abandoned" gr_direct_context_is_abandoned ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'gr_direct_context_is_abandoned'
foreign import ccall "&gr_direct_context_is_abandoned" p'gr_direct_context_is_abandoned ::
  FunPtr (Ptr (Gr_direct_context) -> IO (CBool))

{- | C function signature:

@
void gr_direct_context_abandon_context(gr_direct_context_t *context)
@
-}
foreign import ccall "gr_direct_context_abandon_context" gr_direct_context_abandon_context ::
  Ptr (Gr_direct_context) -- ^ C argument @"gr_direct_context_t * context"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'gr_direct_context_abandon_context'
foreign import ccall "&gr_direct_context_abandon_context" p'gr_direct_context_abandon_context ::
  FunPtr (Ptr (Gr_direct_context) -> IO (()))

{- | C function signature:
